--- a/sbin/mount/Makefile
+++ b/sbin/mount/Makefile
@@ -1,9 +1,10 @@
-#	@(#)Makefile	8.6 (Berkeley) 5/8/95
 # $MidnightBSD$
+#	@(#)Makefile	8.6 (Berkeley) 5/8/95
+# $FreeBSD: stable/10/sbin/mount/Makefile 253433 2013-07-17 19:32:07Z rodrigc $
 
 PROG=	mount
 SRCS=	mount.c mount_fs.c getmntopts.c vfslist.c
-MAN=	mount.8
+MAN=	mount.8 mount.conf.8
 # We do NOT install the getmntopts.3 man page.
 
 DPADD=	${LIBUTIL}
