--- a/sbin/mdmfs/Makefile
+++ b/sbin/mdmfs/Makefile
@@ -1,4 +1,5 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/sbin/mdmfs/Makefile 198236 2009-10-19 16:00:24Z ru $
 
 PROG=		mdmfs
 LINKS=		${BINDIR}/${PROG} ${BINDIR}/mount_mfs
