sync md5 with freebsd

--- a/sbin/md5/Makefile
+++ b/sbin/md5/Makefile
@@ -1,19 +1,22 @@
-#	@(#)Makefile	8.1 (Berkeley) 6/9/93
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 6/9/93
+# $FreeBSD: stable/10/sbin/md5/Makefile 314332 2017-02-27 10:40:39Z avg $
 
 PROG=	md5
 
 LINKS=	${BINDIR}/md5 ${BINDIR}/rmd160 \
 	${BINDIR}/md5 ${BINDIR}/sha1 \
 	${BINDIR}/md5 ${BINDIR}/sha256 \
-	${BINDIR}/md5 ${BINDIR}/sha512
+	${BINDIR}/md5 ${BINDIR}/sha384 \
+	${BINDIR}/md5 ${BINDIR}/sha512 \
+	${BINDIR}/md5 ${BINDIR}/sha512t256
 
 MLINKS=	md5.1 rmd160.1 \
 	md5.1 sha1.1 \
 	md5.1 sha256.1 \
-	md5.1 sha512.1
-
-WFORMAT?=	1
+	md5.1 sha384.1 \
+	md5.1 sha512.1 \
+	md5.1 sha512t256.1
 
 DPADD=	${LIBMD}
 LDADD=	-lmd
