fix merge issue

--- a/.gitattributes
+++ b/.gitattributes
@@ -12893,24 +12893,38 @@ contrib/file/COPYING -text
 contrib/file/ChangeLog -text
 contrib/file/INSTALL -text
 contrib/file/MAINT -text
+contrib/file/Makefile.am svneol=native#text/plain
+contrib/file/Makefile.in svneol=native#text/plain
 contrib/file/NEWS -text
 contrib/file/README -text
 contrib/file/TODO -text
 contrib/file/acinclude.m4 -text
 contrib/file/aclocal.m4 -text
 contrib/file/compile -text
+contrib/file/config.guess -text
 contrib/file/config.h.in -text
+contrib/file/config.sub -text
 contrib/file/configure -text
 contrib/file/configure.ac -text
+contrib/file/depcomp -text
+contrib/file/doc/Makefile.am svneol=native#text/plain
+contrib/file/doc/Makefile.in svneol=native#text/plain
+contrib/file/doc/file.man -text
+contrib/file/doc/libmagic.man -text
+contrib/file/doc/magic.man -text
 contrib/file/install-sh -text
+contrib/file/ltmain.sh svneol=native#text/plain
 contrib/file/m4/libtool.m4 -text
 contrib/file/m4/ltoptions.m4 -text
 contrib/file/m4/ltsugar.m4 -text
 contrib/file/m4/ltversion.m4 -text
 contrib/file/m4/lt~obsolete.m4 -text
+contrib/file/magic/Header -text
+contrib/file/magic/Localstuff -text
 contrib/file/magic/Magdir/acorn -text
 contrib/file/magic/Magdir/adi -text
 contrib/file/magic/Magdir/adventure -text
+contrib/file/magic/Magdir/algol68 -text
 contrib/file/magic/Magdir/allegro -text
 contrib/file/magic/Magdir/alliant -text
 contrib/file/magic/Magdir/amanda -text
@@ -12918,16 +12932,22 @@ contrib/file/magic/Magdir/amigaos -text
 contrib/file/magic/Magdir/android -text
 contrib/file/magic/Magdir/animation -text
 contrib/file/magic/Magdir/aout -text
+contrib/file/magic/Magdir/apache -text
 contrib/file/magic/Magdir/apl -text
 contrib/file/magic/Magdir/apple -text
+contrib/file/magic/Magdir/application -text
 contrib/file/magic/Magdir/applix -text
+contrib/file/magic/Magdir/apt -text
 contrib/file/magic/Magdir/archive -text
 contrib/file/magic/Magdir/assembler -text
 contrib/file/magic/Magdir/asterix -text
 contrib/file/magic/Magdir/att3b -text
 contrib/file/magic/Magdir/audio -text
 contrib/file/magic/Magdir/basis -text
+contrib/file/magic/Magdir/ber -text
 contrib/file/magic/Magdir/bflt -text
+contrib/file/magic/Magdir/bhl -text
+contrib/file/magic/Magdir/bioinformatics -text
 contrib/file/magic/Magdir/blackberry -text
 contrib/file/magic/Magdir/blcr -text
 contrib/file/magic/Magdir/blender -text
@@ -12940,6 +12960,7 @@ contrib/file/magic/Magdir/c-lang -text
 contrib/file/magic/Magdir/c64 -text
 contrib/file/magic/Magdir/cad -text
 contrib/file/magic/Magdir/cafebabe -text
+contrib/file/magic/Magdir/cbor -text
 contrib/file/magic/Magdir/cddb -text
 contrib/file/magic/Magdir/chord -text
 contrib/file/magic/Magdir/cisco -text
@@ -12947,11 +12968,13 @@ contrib/file/magic/Magdir/citrus -text
 contrib/file/magic/Magdir/clarion -text
 contrib/file/magic/Magdir/claris -text
 contrib/file/magic/Magdir/clipper -text
+contrib/file/magic/Magdir/coff -text
 contrib/file/magic/Magdir/commands -text
 contrib/file/magic/Magdir/communications -text
 contrib/file/magic/Magdir/compress -text
 contrib/file/magic/Magdir/console -text
 contrib/file/magic/Magdir/convex -text
+contrib/file/magic/Magdir/coverage -text
 contrib/file/magic/Magdir/cracklib -text
 contrib/file/magic/Magdir/ctags -text
 contrib/file/magic/Magdir/ctf -text
@@ -12959,6 +12982,7 @@ contrib/file/magic/Magdir/cubemap -text
 contrib/file/magic/Magdir/cups -text
 contrib/file/magic/Magdir/dact -text
 contrib/file/magic/Magdir/database -text
+contrib/file/magic/Magdir/der -text
 contrib/file/magic/Magdir/diamond -text
 contrib/file/magic/Magdir/diff -text
 contrib/file/magic/Magdir/digital -text
@@ -12975,7 +12999,9 @@ contrib/file/magic/Magdir/erlang -text
 contrib/file/magic/Magdir/esri -text
 contrib/file/magic/Magdir/fcs -text
 contrib/file/magic/Magdir/filesystems -text
+contrib/file/magic/Magdir/finger -text
 contrib/file/magic/Magdir/flash -text
+contrib/file/magic/Magdir/flif -text
 contrib/file/magic/Magdir/fonts -text
 contrib/file/magic/Magdir/fortran -text
 contrib/file/magic/Magdir/frame -text
@@ -12984,6 +13010,7 @@ contrib/file/magic/Magdir/fsav -text
 contrib/file/magic/Magdir/fusecompress -text
 contrib/file/magic/Magdir/games -text
 contrib/file/magic/Magdir/gcc -text
+contrib/file/magic/Magdir/gconv -text
 contrib/file/magic/Magdir/geo -text
 contrib/file/magic/Magdir/geos -text
 contrib/file/magic/Magdir/gimp -text
@@ -12991,6 +13018,7 @@ contrib/file/magic/Magdir/gnome -text
 contrib/file/magic/Magdir/gnu -text
 contrib/file/magic/Magdir/gnumeric -text
 contrib/file/magic/Magdir/gpt -text
+contrib/file/magic/Magdir/gpu -text
 contrib/file/magic/Magdir/grace -text
 contrib/file/magic/Magdir/graphviz -text
 contrib/file/magic/Magdir/gringotts -text
@@ -13015,6 +13043,7 @@ contrib/file/magic/Magdir/jpeg -text
 contrib/file/magic/Magdir/karma -text
 contrib/file/magic/Magdir/kde -text
 contrib/file/magic/Magdir/keepass -text
+contrib/file/magic/Magdir/kerberos -text
 contrib/file/magic/Magdir/kml -text
 contrib/file/magic/Magdir/lecter -text
 contrib/file/magic/Magdir/lex -text
@@ -13040,6 +13069,8 @@ contrib/file/magic/Magdir/matroska -text
 contrib/file/magic/Magdir/mcrypt -text
 contrib/file/magic/Magdir/mercurial -text
 contrib/file/magic/Magdir/metastore -text
+contrib/file/magic/Magdir/meteorological -text
+contrib/file/magic/Magdir/microfocus -text
 contrib/file/magic/Magdir/mime -text
 contrib/file/magic/Magdir/mips -text
 contrib/file/magic/Magdir/mirage -text
@@ -13056,6 +13087,7 @@ contrib/file/magic/Magdir/msvc -text
 contrib/file/magic/Magdir/msx -text
 contrib/file/magic/Magdir/mup -text
 contrib/file/magic/Magdir/music -text
+contrib/file/magic/Magdir/nasa -text
 contrib/file/magic/Magdir/natinst -text
 contrib/file/magic/Magdir/ncr -text
 contrib/file/magic/Magdir/neko -text
@@ -13079,6 +13111,8 @@ contrib/file/magic/Magdir/parrot -text
 contrib/file/magic/Magdir/pascal -text
 contrib/file/magic/Magdir/pbf -text
 contrib/file/magic/Magdir/pbm -text
+contrib/file/magic/Magdir/pc88 -text
+contrib/file/magic/Magdir/pc98 -text
 contrib/file/magic/Magdir/pdf -text
 contrib/file/magic/Magdir/pdp -text
 contrib/file/magic/Magdir/perl -text
@@ -13087,13 +13121,16 @@ contrib/file/magic/Magdir/pgp -text
 contrib/file/magic/Magdir/pkgadd -text
 contrib/file/magic/Magdir/plan9 -text
 contrib/file/magic/Magdir/plus5 -text
+contrib/file/magic/Magdir/polyml -text
 contrib/file/magic/Magdir/printer -text
 contrib/file/magic/Magdir/project -text
 contrib/file/magic/Magdir/psdbms -text
+contrib/file/magic/Magdir/psl -text
 contrib/file/magic/Magdir/pulsar -text
 contrib/file/magic/Magdir/pwsafe -text
 contrib/file/magic/Magdir/pyramid -text
 contrib/file/magic/Magdir/python -text
+contrib/file/magic/Magdir/qt -text
 contrib/file/magic/Magdir/revision -text
 contrib/file/magic/Magdir/riff -text
 contrib/file/magic/Magdir/rinex -text
