--- a/contrib/smbfs/smbutil/Makefile
+++ b/contrib/smbfs/smbutil/Makefile
@@ -1,4 +1,5 @@
-# $Id: Makefile,v 1.1.1.2 2006-02-25 02:34:00 laffer1 Exp $
+# $MidnightBSD$
+# $Id: Makefile,v 1.7 2001/04/16 04:34:26 bp Exp $
 
 PROG=	smbutil
 SRCS=	smbutil.c dumptree.c login.c lookup.c view.c print.c
