--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -1710,7 +1710,8 @@ _prebuild_libs=	${_kerberos5_lib_libasn1} \
 		lib/libutil ${_lib_libypclnt} lib/libz lib/msun \
 		${_secure_lib_libcrypto} ${_lib_libldns} \
 		${_secure_lib_libssh} ${_secure_lib_libssl} \
-		lib/libblocksruntime
+		lib/libblocksruntime lib/libarchive lib/libfetch lib/libsqlite3 \
+		lib/libdispatch lib/libmagic
 .if ${MK_GNUCXX} != no
 _prebuild_libs+= gnu/lib/libstdc++ gnu/lib/libsupc++
 gnu/lib/libstdc++__L: lib/msun__L
@@ -1754,7 +1755,8 @@ _lib_libradius=	lib/libradius
 _ofed_lib=	contrib/ofed/usr.lib/
 .endif
 
-lib/liblzma__L: lib/libthr__L
+lib/liblzma__L lib/libdispatch__L: lib/libthr__L
+lib/libfetch__L: secure/lib/libssl__L
 
 _generic_libs=	${_cddl_lib} gnu/lib ${_kerberos5_lib} lib ${_secure_lib} usr.bin/lex/lib ${_ofed_lib}
 .for _DIR in ${LOCAL_LIB_DIRS}
