--- a/secure/usr.sbin/Makefile
+++ b/secure/usr.sbin/Makefile
@@ -1,4 +1,5 @@
-# $FreeBSD: src/secure/usr.sbin/Makefile,v 1.6 2006/03/17 18:54:32 ru Exp $
+# $MidnightBSD$
+# $FreeBSD: stable/10/secure/usr.sbin/Makefile 291792 2015-12-04 18:14:31Z bdrewery $
 
 .include <bsd.own.mk>
 
@@ -6,5 +7,11 @@ SUBDIR=
 .if ${MK_OPENSSH} != "no"
 SUBDIR+=sshd
 .endif
+
+.if ${MK_TESTS} != "no"
+SUBDIR+=tests
+.endif
+
+SUBDIR_PARALLEL=
 
 .include <bsd.subdir.mk>
