--- a/bin/ps/Makefile
+++ b/bin/ps/Makefile
@@ -1,5 +1,5 @@
 # $MidnightBSD$
-# $FreeBSD: src/bin/ps/Makefile,v 1.27 2005/01/27 13:42:40 delphij Exp $
+# $FreeBSD: stable/10/bin/ps/Makefile 266279 2014-05-17 02:32:47Z bdrewery $
 #	@(#)Makefile	8.1 (Berkeley) 6/2/93
 
 PROG=	ps
@@ -12,7 +12,7 @@ SRCS=	fmt.c keyword.c nlist.c print.c ps.c
 # on large systems.
 #
 CFLAGS+=-DLAZY_PS
-DPADD=	${LIBM} ${LIBKVM}
-LDADD=	-lm -lkvm
+DPADD=	${LIBM} ${LIBKVM} ${LIBJAIL}
+LDADD=	-lm -lkvm -ljail
 
 .include <bsd.prog.mk>
