--- a/.gitattributes
+++ b/.gitattributes
@@ -342,6 +342,35 @@ bin/pax/tty_subs.c -text
 bin/pkill/Makefile -text
 bin/pkill/pkill.1 -text
 bin/pkill/pkill.c -text
+bin/pkill/tests/Makefile svneol=native#text/plain
+bin/pkill/tests/pgrep-F_test.sh svneol=native#text/plain
+bin/pkill/tests/pgrep-LF_test.sh svneol=native#text/plain
+bin/pkill/tests/pgrep-P_test.sh svneol=native#text/plain
+bin/pkill/tests/pgrep-U_test.sh svneol=native#text/plain
+bin/pkill/tests/pgrep-_g_test.sh svneol=native#text/plain
+bin/pkill/tests/pgrep-_s_test.sh svneol=native#text/plain
+bin/pkill/tests/pgrep-g_test.sh svneol=native#text/plain
+bin/pkill/tests/pgrep-i_test.sh svneol=native#text/plain
+bin/pkill/tests/pgrep-j_test.sh svneol=native#text/plain
+bin/pkill/tests/pgrep-l_test.sh svneol=native#text/plain
+bin/pkill/tests/pgrep-n_test.sh svneol=native#text/plain
+bin/pkill/tests/pgrep-o_test.sh svneol=native#text/plain
+bin/pkill/tests/pgrep-q_test.sh svneol=native#text/plain
+bin/pkill/tests/pgrep-s_test.sh svneol=native#text/plain
+bin/pkill/tests/pgrep-t_test.sh svneol=native#text/plain
+bin/pkill/tests/pgrep-v_test.sh svneol=native#text/plain
+bin/pkill/tests/pgrep-x_test.sh svneol=native#text/plain
+bin/pkill/tests/pkill-F_test.sh svneol=native#text/plain
+bin/pkill/tests/pkill-LF_test.sh svneol=native#text/plain
+bin/pkill/tests/pkill-P_test.sh svneol=native#text/plain
+bin/pkill/tests/pkill-U_test.sh svneol=native#text/plain
+bin/pkill/tests/pkill-_g_test.sh svneol=native#text/plain
+bin/pkill/tests/pkill-g_test.sh svneol=native#text/plain
+bin/pkill/tests/pkill-i_test.sh svneol=native#text/plain
+bin/pkill/tests/pkill-j_test.sh svneol=native#text/plain
+bin/pkill/tests/pkill-s_test.sh svneol=native#text/plain
+bin/pkill/tests/pkill-t_test.sh svneol=native#text/plain
+bin/pkill/tests/pkill-x_test.sh svneol=native#text/plain
 bin/ps/Makefile -text
 bin/ps/extern.h -text
 bin/ps/fmt.c -text
