sync mv with freebsd

--- a/bin/mv/Makefile
+++ b/bin/mv/Makefile
@@ -1,7 +1,13 @@
-#	@(#)Makefile	8.2 (Berkeley) 4/2/94
-# $FreeBSD: src/bin/mv/Makefile,v 1.8 2001/12/04 01:57:45 obrien Exp $
 # $MidnightBSD$
+#	@(#)Makefile	8.2 (Berkeley) 4/2/94
+# $FreeBSD: stable/10/bin/mv/Makefile 262951 2014-03-09 17:04:31Z jmmv $
+
+.include <bsd.own.mk>
 
 PROG=	mv
+
+.if ${MK_TESTS} != "no"
+SUBDIR+=    tests
+.endif
 
 .include <bsd.prog.mk>
