--- a/bin/ln/Makefile
+++ b/bin/ln/Makefile
@@ -1,11 +1,17 @@
+# $MidnightBSD$
 #	@(#)Makefile	8.2 (Berkeley) 5/31/93
-# $FreeBSD: src/bin/ln/Makefile,v 1.11 2001/12/04 01:57:44 obrien Exp $
-# $MidnightBSD$ 
+# $FreeBSD: stable/10/bin/ln/Makefile 321093 2017-07-17 21:12:02Z ngie $
+
+.include <bsd.own.mk>
 
 PROG=	ln
 MAN=	ln.1 symlink.7
 
 LINKS=	${BINDIR}/ln ${BINDIR}/link
 MLINKS=	ln.1 link.1
+
+.if ${MK_TESTS} != "no"
+SUBDIR+= 	tests
+.endif
 
 .include <bsd.prog.mk>
