--- a/bin/ls/Makefile
+++ b/bin/ls/Makefile
@@ -1,5 +1,6 @@
-#	@(#)Makefile	8.1 (Berkeley) 6/2/93
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 6/2/93
+# $FreeBSD: stable/10/bin/ls/Makefile 289965 2015-10-25 23:03:04Z ngie $
 
 .include <bsd.own.mk>
 
@@ -8,10 +9,15 @@ SRCS=	cmp.c ls.c print.c util.c
 DPADD=	${LIBUTIL}
 LDADD=	-lutil
 
-.if !defined(RELEASE_CRUNCH)
+.if !defined(RELEASE_CRUNCH) && \
+	${MK_LS_COLORS} != no
 CFLAGS+= -DCOLORLS
 DPADD+=	${LIBTERMCAP}
 LDADD+=	-ltermcap
+.endif
+
+.if ${MK_TESTS} != "no"
+SUBDIR+=	tests
 .endif
 
 .include <bsd.prog.mk>
