--- a/bin/kill/Makefile
+++ b/bin/kill/Makefile
@@ -1,6 +1,6 @@
-#	@(#)Makefile	8.1 (Berkeley) 5/31/93
-# $FreeBSD: src/bin/kill/Makefile,v 1.8 2001/12/04 01:57:44 obrien Exp $
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 5/31/93
+# $FreeBSD: stable/10/bin/kill/Makefile 87323 2001-12-04 01:57:47Z obrien $
 
 PROG=	kill
 
