--- a/sbin/geom/class/sched/Makefile
+++ b/sbin/geom/class/sched/Makefile
@@ -1,5 +1,6 @@
-# GEOM_LIBRARY_PATH
 # $MidnightBSD$
+# GEOM_LIBRARY_PATH
+# $FreeBSD: stable/10/sbin/geom/class/sched/Makefile 222772 2011-06-06 20:24:17Z ed $
 
 .PATH: ${.CURDIR}/../../misc
 
