--- a/sbin/geom/class/Makefile.inc
+++ b/sbin/geom/class/Makefile.inc
@@ -1,10 +1,13 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/sbin/geom/class/Makefile.inc 249657 2013-04-19 19:45:00Z ed $
 
 SHLIBDIR?=${GEOM_CLASS_DIR}
 SHLIB_NAME?=geom_${GEOM_CLASS}.so
 LINKS=	${BINDIR}/geom ${BINDIR}/g${GEOM_CLASS}
 MAN=	g${GEOM_CLASS}.8
 SRCS+=	geom_${GEOM_CLASS}.c subr.c
+
+NO_WMISSING_VARIABLE_DECLARATIONS=
 
 CFLAGS+= -I${.CURDIR}/../..
 
