--- a/sbin/geom/class/concat/Makefile
+++ b/sbin/geom/class/concat/Makefile
@@ -1,4 +1,5 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/sbin/geom/class/concat/Makefile 216468 2010-12-15 23:24:34Z obrien $
 
 .PATH: ${.CURDIR}/../../misc
 
