--- a/sbin/geom/class/virstor/Makefile
+++ b/sbin/geom/class/virstor/Makefile
@@ -1,4 +1,5 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/sbin/geom/class/virstor/Makefile 216472 2010-12-16 00:00:28Z obrien $
 
 .PATH: ${.CURDIR}/../../misc ${.CURDIR}/../../../../sys/geom/virstor
 
