--- a/sbin/gvinum/Makefile
+++ b/sbin/gvinum/Makefile
@@ -1,11 +1,12 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/sbin/gvinum/Makefile 239781 2012-08-28 14:20:41Z brooks $
 
 PROG=	gvinum
 SRCS=	gvinum.c gvinum.h geom_vinum_share.c
 MAN=	gvinum.8
 
 WARNS?=	2
-CFLAGS=	-I${.CURDIR}/../../sys -I${DESTDIR}/${INCLUDEDIR}/edit
+CFLAGS+=	-I${.CURDIR}/../../sys -I${DESTDIR}/${INCLUDEDIR}/edit
 
 DPADD=	${LIBEDIT} ${LIBTERMCAP} ${LIBDEVSTAT} ${LIBKVM} ${LIBGEOM}
 LDADD=	-ledit -ltermcap -ldevstat -lkvm -lgeom
