--- a/sbin/growfs/Makefile
+++ b/sbin/growfs/Makefile
@@ -1,10 +1,11 @@
+# $MidnightBSD$
 #	@(#)Makefile	8.8 (Berkeley) 6/21/2000
 #
 # $TSHeader: src/sbin/growfs/Makefile,v 1.4 2000/12/05 19:45:24 tomsoft Exp $
-# $MidnightBSD$
+# $FreeBSD: stable/10/sbin/growfs/Makefile 284669 2015-06-21 06:49:44Z trasz $
 #
 
-#GFSDBG=
+.include <bsd.own.mk>
 
 .PATH:	${.CURDIR}/../mount
 
@@ -14,10 +15,16 @@ MAN=	growfs.8
 CFLAGS+=-I${.CURDIR}/../mount
 
 .if defined(GFSDBG)
-SRCS+=  debug.c
+SRCS+=	debug.c
+CFLAGS+= -DFS_DEBUG
+NO_WCAST_ALIGN= yes
 .endif  
 
 DPADD=	${LIBUTIL}
 LDADD=	-lutil
+
+.if ${MK_TESTS} != "no"
+SUBDIR+=    tests
+.endif
 
 .include <bsd.prog.mk>      
