sync ggate with freebsd

--- a/sbin/ggate/ggatec/Makefile
+++ b/sbin/ggate/ggatec/Makefile
@@ -1,4 +1,5 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/sbin/ggate/ggatec/Makefile 168422 2007-04-06 11:19:48Z pjd $
 
 .PATH: ${.CURDIR}/../shared
 
