--- a/sbin/ggate/ggated/Makefile
+++ b/sbin/ggate/ggated/Makefile
@@ -1,4 +1,5 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/sbin/ggate/ggated/Makefile 296815 2016-03-13 23:32:59Z ngie $
 
 .PATH: ${.CURDIR}/../shared
 
@@ -6,8 +7,8 @@ PROG=	ggated
 MAN=	ggated.8
 SRCS=	ggated.c ggate.c
 
-DPADD=	${LIBPTHREAD}
-LDADD=	-lpthread
+DPADD=	${LIBPTHREAD} ${LIBUTIL}
+LDADD=	-lpthread -lutil
 
 CFLAGS+= -I${.CURDIR}/../shared
 
