--- a/sbin/ggate/ggatel/Makefile
+++ b/sbin/ggate/ggatel/Makefile
@@ -1,4 +1,5 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/sbin/ggate/ggatel/Makefile 130837 2004-06-21 09:20:06Z pjd $
 
 .PATH: ${.CURDIR}/../shared
 
