--- a/sbin/ggate/Makefile.inc
+++ b/sbin/ggate/Makefile.inc
@@ -1,5 +1,4 @@
 # $MidnightBSD$
-
-WARNS=3
+# $FreeBSD: stable/10/sbin/ggate/Makefile.inc 198236 2009-10-19 16:00:24Z ru $
 
 .include "../Makefile.inc"
