--- a/sbin/dhclient/dhclient.conf
+++ b/sbin/dhclient/dhclient.conf
@@ -1,4 +1,5 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/sbin/dhclient/dhclient.conf 166602 2007-02-09 17:50:26Z emaste $
 
 send host-name "andare.fugue.com";
 send dhcp-client-identifier 1:0:a0:24:ab:fb:9c;
