sync devd with freebsd

--- a/sbin/devd/Makefile
+++ b/sbin/devd/Makefile
@@ -1,4 +1,7 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/sbin/devd/Makefile 270242 2014-08-20 19:30:58Z asomers $
+
+.include <bsd.own.mk>
 
 PROG_CXX=devd
 SRCS=	devd.cc token.l parse.y y.tab.h
@@ -15,5 +18,9 @@ YFLAGS+=-v
 CFLAGS+=-I. -I${.CURDIR}
 
 CLEANFILES= y.output
+
+.if ${MK_TESTS} != "no"
+SUBDIR+=    tests
+.endif
 
 .include <bsd.prog.mk>
