--- a/sbin/camcontrol/Makefile
+++ b/sbin/camcontrol/Makefile
@@ -1,13 +1,17 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/sbin/camcontrol/Makefile 284435 2015-06-16 02:31:11Z ken $
 
 PROG=	camcontrol
 SRCS=	camcontrol.c util.c
 .if !defined(RELEASE_CRUNCH)
-SRCS+=	fwdownload.c modeedit.c progress.c
+SRCS+=	attrib.c fwdownload.c modeedit.c persist.c progress.c
 .else
 CFLAGS+= -DMINIMALISTIC
 .endif
+# This is verboten
+.if ${MACHINE_CPUARCH} == "arm"
 WARNS?= 3
+.endif
 DPADD=	${LIBCAM} ${LIBSBUF} ${LIBUTIL}
 LDADD=	-lcam -lsbuf -lutil
 MAN=	camcontrol.8
