--- a/sbin/ccdconfig/Makefile
+++ b/sbin/ccdconfig/Makefile
@@ -1,4 +1,5 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/sbin/ccdconfig/Makefile 198236 2009-10-19 16:00:24Z ru $
 
 PROG=	ccdconfig
 MAN=	ccdconfig.8
