--- a/sbin/badsect/Makefile
+++ b/sbin/badsect/Makefile
@@ -1,5 +1,6 @@
-#	@(#)Makefile	8.1 (Berkeley) 6/5/93
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 6/5/93
+# $FreeBSD: stable/10/sbin/badsect/Makefile 198236 2009-10-19 16:00:24Z ru $
 
 PROG=	badsect
 DPADD=	${LIBUFS}
