--- a/sbin/atm/Makefile.inc
+++ b/sbin/atm/Makefile.inc
@@ -1,3 +1,4 @@
+# $MidnightBSD$
 # ===================================
 # HARP  |  Host ATM Research Platform
 # ===================================
@@ -20,7 +21,7 @@
 # Copies of this Software may be made, however, the above copyright
 # notice must be reproduced on all copies.
 #
-#	@(#) $Id: Makefile.inc,v 1.1.1.2 2006-02-25 02:35:20 laffer1 Exp $
-# $FreeBSD: src/sbin/atm/Makefile.inc,v 1.5 2003/08/18 15:32:16 obrien Exp $
+#	@(#) $Id: Makefile.inc,v 1.5 1998/07/10 16:01:58 jpt Exp $
+# $FreeBSD: stable/10/sbin/atm/Makefile.inc 119073 2003-08-18 15:32:16Z obrien $
 
 .include "../Makefile.inc"
