--- a/bin/expr/Makefile
+++ b/bin/expr/Makefile
@@ -12,4 +12,8 @@ CFLAGS+= -fwrapv
 
 NO_WMISSING_VARIABLE_DECLARATIONS=
 
+.if ${MK_TESTS} != "no"
+SUBDIR+=	tests
+.endif
+
 .include <bsd.prog.mk>
